update swagger docs ategory
